--- a/front/index.html
+++ b/front/index.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover"
     />
-    <title>VK Support</title>
+    <title>Avia</title>
   </head>
   <body>
     <div id="root"></div>
